JSW Devsb/src/objects/State_Actuals__c.object
<CustomObject>
    <fields>
        <fullName>Commercial_Invoice_Date__c</fullName>
        <label>Commercial Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depot_Actuals__c</fullName>
        <label>Depot Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Actuals__c</fullName>
        <label>Direct Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Trade_Actuals__c</fullName>
        <label>Non Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>TEXT( State_MRM_Targets__r.Product_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rail_Actuals__c</fullName>
        <label>Rail Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Road_Actuals__c</fullName>
        <label>Road Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_MRM_Targets__c</fullName>
        <label>State MRM Targets</label>
        <referenceTo>State_MRM_Targets__c</referenceTo>
        <relationshipLabel>State Actuals</relationshipLabel>
        <relationshipName>State_Actuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trade_Actuals__c</fullName>
        <label>Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>State Actuals</label>
    <nameField>
        <label>State Actuals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>